Fix downtime tooltip visibility for netbanking banks

--- a/app/css/modal.styl
+++ b/app/css/modal.styl
@@ -301,9 +301,6 @@ body, html {
   }
 }
 
-#netb-banks .item {
-  overflow: hidden;
-}
 
 .nb-selection-container {
   padding-bottom: 12px;
